[package]
name = "borderify"
version = "0.1.0"
authors = ["Julius Michaelis"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
name = "ext"

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.64", features = ["Window", "Document", "console", "HtmlBodyElement", "CssStyleDeclaration"] }
