[package]
name = "join-on-time"
version = "0.1.1"
authors = ["Julius Michaelis"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
name = "ext"
doc = false

[dependencies]
chrono = "0.4.40"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo = { version = "0.11.0", features = ["futures"] }
itertools = "0.14.0"
once_cell = "1.20.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Document", "console", "HtmlBodyElement", "CssStyleDeclaration", "HtmlCollection", "HtmlButtonElement", "DomTokenList"] }
