[package]
name = "lionel"
version = "0.1.0"
authors = ["Julius Michaelis"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
name = "ext"
doc = false

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
futures = "0.3.28"
gloo = { version = "0.10.0", default-features = false, features = ["timers", "futures"] }
itertools = "0.11.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Window", "Document", "console", "HtmlBodyElement", "CssStyleDeclaration", "HtmlCollection", "HtmlButtonElement", "DomTokenList"] }
