[package]
name = "lionel"
version = "0.1.0"
authors = ["Julius Michaelis"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
name = "ext"
doc = false

[dependencies]
cached = "0.55.1"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.6.3", features = ["web"] }
futures = "0.3.31"
gloo = { version = "0.11.0", default-features = false, features = ["timers", "futures", "console"] }
itertools = "0.14.0"
js-sys = "0.3.77"
once_cell = "1.20.3"
tldextract = "0.6.0"
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Document", "console", "HtmlBodyElement", "CssStyleDeclaration", "HtmlCollection", "HtmlButtonElement", "DomTokenList"] }
